--- a/Home.css
+++ b/Home.css
@@ -124,8 +124,6 @@ hr {
   outline: none;
 }
 
-
-
 .slider-container {
   position: relative;
   width: 100%;
@@ -160,4 +158,48 @@ hr {
 
 .next-btn {
   right: 10px;
+}
+
+/* product section  */
+.product-section {
+  text-align: center;
+  margin: 20px;
+}
+
+.product-container {
+  display: flex;
+  overflow-x: auto;
+  padding: 20px;
+  margin: 25px;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.product-card {
+  width: 200px;
+  margin-right: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  margin-top: 10px;
+}
+
+.product-card:hover {
+  transform: scale(1.05);
+}
+
+.product-image {
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
+  padding: 18px;
+}
+
+.product-details {
+  padding: 10px;
+}
+
+.product-price {
+  font-size: 16px;
+  font-weight: bold;
+  color: #f98d00;
 }
