--- a/Home.css
+++ b/Home.css
@@ -275,3 +275,61 @@ hr {
   );
   z-index: 1;
 }
+
+/* contact-section */
+
+.contact-section {
+  text-align: center;
+  margin: 40px;
+}
+
+.cards-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  
+}
+
+.card {
+  width: 45%;
+  padding: 0;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  border: none;
+}
+
+.card img {
+  width: 100%;
+  border: none;
+}
+
+.card-with-input {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-with-input img {
+  width: 100%;
+  border: none;
+}
+
+.card-with-input .content-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.card-with-input h3,
+.card-with-input p,
+.card-with-input input {
+  margin: 10px;
+  z-index: 1; /* Ensure content is above the overlay */
+}
